--- a/lab10rakitova.html
+++ b/lab10rakitova.html
@@ -26,6 +26,8 @@
       <button id="newRound" type="button">Новый раунд</button>
       <button id="reset" type="button">Сброс</button>
   </form>
+  
+<script src="script.js"> </script>
 
 </body>
 </html>
