--- a/lab10rakitova.html
+++ b/lab10rakitova.html
@@ -19,14 +19,14 @@
     <div id="second">Второй игрок:</div>
 </div>
 <h3>Ход</h3>
-<div id="hod"></div>
+<div id="move"></div>
 <canvas height="300" width="300" id="field">
   </canvas>
   <form>
       <button id="newRound" type="button">Новый раунд</button>
       <button id="reset" type="button">Сброс</button>
   </form>
-  
+
 <script src="script.js"> </script>
 
 </body>
