--- a/lab10rakitova.html
+++ b/lab10rakitova.html
@@ -24,7 +24,7 @@
   </canvas>
   <form>
       <button id="newRound" type="button">Новый раунд</button>
-      <button id="reset" type="button">Сброс</button>
+      <button id="newPlay" type="button">Новая игра</button>
   </form>
 
 <script src="script.js"> </script>
